assets/css/style.css
@import url('https://fonts.googleapis.com/css2?family=Libre+Baskerville:ital,wght@0,400;0,700;1,400&family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap');

/*--------------------------------------------Colours*/

body {
    background-color: #143049;
}

.ui-menu-color {
    background-color: #143049;
}

.inline-block {
    color: #af9442;
}

.section-details {
    background-color: #f9faf4;
    border-color:#af9442;
}

.bg-color-contact {
    background-color: #143049;
}

.contact-color {
    color: #af9442;
}

.foot-email a {
    color: #af9442;
}

/*--------------------------------------------Image sizing*/
img {
    width: 100%;
}

/*--------------------------------------------Menu Items*/

.menuitem {
    color:#af9442;
    padding: 0;
}

.menuitem a {
    width: 100%;
    text-decoration: none;
}

.menuitem a i {
    padding-top: 20px;
    display: block;
    color: #af9442;
    font-size: 26px;
}

.menuitem span {
    display: block;
    width: 100%;  
    color:#af9442; 
    padding-top: 14px;
    padding-bottom: 14px;
    text-align: center;
    text-transform: uppercase;
    font-weight: 500;
    letter-spacing: 2px;
}

/*--------------------------------------------menu items optimised for small mobile devices*/


.menu-spacing span {
    font-family: 'Libre+Baskerville', sans-serif;
    font-size: 11px;
    padding: .5em;
    color: #af9442;
    text-transform: uppercase;
}

.menu-spacing a i {
    display: block;
    color: #af9442;
    font-size: 11px;
    padding-top:20px;
    margin: 0;
}

.menu-spacing .active i {
    color: #25b99f;
    font-weight: 700;
}

.list-inline-item {
    margin-bottom: 20px;
}

/* ----------------------------------------Special paddings/margins/text */

h1,
h2,
h3,
h4 {
    margin: 0;
    font-family: 'Libre+Baskerville', sans-serif;
}

h2 {
    text-align: center;
}

p {
    font-family: 'Open+Sans', sans-serif;
    margin: 10px;
    font-size: 14px;
}

.uppercase {
    text-transform: uppercase;
}

.solid-border {
    border-style: solid;
    border-width: 5px 0 0;
    padding-left: 15px;
    padding-right: 15px;
    border-color:#af9442;
}

.solid-border-short{
    border-style: solid;
    border-width: 5px 0 0;
    margin: 0 8%;
    border-color:#af9442;
}

.img-center {
    display:block;
    margin:auto;
}

/*--------------------------------------------Heading*/

header {
    margin: 0;
    color: #fff;
    min-height: 360px;
}

#header-details {
     text-align: center;
}

.error-screen-padding {
    padding-top: 50px;
}
 
.hero-image {
    background: url("../images/sango.jpg");
    background-position: center;
    background-repeat: no-repeat;
    background-size: cover;
    margin: 0px;
    height: 395px;
}

.ourtrip-image {
    background: url("../images/dramatic.jpg");
    background-position: center;
    background-repeat: no-repeat;
    background-size: cover;
    margin: 0px;
    height: 395px;
}

.gallery-image {
    background: url("../images/achmelvich.jpg");
    background-position: center;
    background-repeat: no-repeat;
    background-size: cover;
    margin: 0px;
    height: 395px;
}

.comments-image {
    background: url("../images/wideroad.jpg");
    background-position: center;
    background-repeat: no-repeat;
    background-size: cover;
    margin: 0px;
    height: 395px;
}

.lost-image {
    background: url("../images/lost-image.jpg");
    background-position: center;
    background-repeat: no-repeat;
    background-size: cover;
    margin: 0px;
    height: 395px;
}

.confirmation-image {
    background: url("../images/thankyou-tarmac.jpg");
    background-position: center;
    background-repeat: no-repeat;
    background-size: cover;
    margin: 0px;
    height: 395px;
}

figure {
    margin: 8px;
}

.rounded-custom {
    border-radius: 5%;
}

.saltire-gif {
    background: url("../images/scotland-646_256.gif");
    background-position: center;
    background-repeat: no-repeat;
    background-size: contain;
    min-height: 360px; 
    max-height: 395px;   
    margin: 0;
}

.title {
    font-family: "Libre+Baskerville", sans-serif;
    font-size: 35px;
    font-weight: 700;
    margin-top: 20px;
    margin-bottom: 90px;
    color: #af9442;
}

.sub-title {
    font-family: "Libre+Baskerville", sans-serif;
    font-weight: 800;
    font-size: 28px;
    margin-top: 20px;
    margin-bottom: 20px;
    text-align: center;
    color: #143049;
}

.trip-title {
    font-family: "Libre+Baskerville", sans-serif;
    font-weight: 800;
    font-size: 24px;
    margin: 10px 10px 0 0;
    text-align: center;
    color:#af9442;
}

.foot-title {
    background-color: #143049;
    color: #af9442;
    font-size: 35px;
    padding: 10px 0 0 0;
    text-align: center;
}

.general-sub {
    background-color: #143049;
    margin: 0 18%;
    color: #af9442;
    font-weight: 700;
    font-size: 25px;
    text-align: center;
    border-radius: 30%;
}

.menucontainer {
    font-size: 0;
}

#nav li {
    font-size: 10px;
    padding: 0;
}

#nav {
    margin: 0;
}

/* add different color and increased font weight to menu link for current page */

.active span {
    color: #25b99f;
    font-weight: 700;
}

.menuitem .active i {
    color: #25b99f;
    font-weight: 700;
}

/*--------------------------------------------Gallery specific CSS*/

.img-label {
    background-color: #143049;
    color: #af9442;
    font-weight: 700;
    font-size: 25px;
    text-align: center;
    border-bottom-left-radius: 30%;
    border-bottom-right-radius: 30%;
}

.img-padding {
    margin-top: 10px;
}

.rounded-gallery {
    width: 100%;
    border-radius: 5% 5% 0 0;
}

.photo-attrib {
    text-align: center;
    font-size: 0.75vw;
}
iframe {
    border: 0;
}

/*---------------------------------------------ourtrip specific css */

.section-trip {
    background-color: #143049;
}

.section-trip-light {
    background-color: #dffcff;
}

.trip-spacing {
    color: #af9442;
    font-size: 25px;
    margin: 10px 0;
    display: inline-block;
    text-align: center;
}

.trip-spacing p {
    color: #fafafa;
    text-align: left;
}

.trip-spacing p span {
    color: #af9442;
    font-weight: 700;
}

.trip-spacing i {
    left:50%;
}

.trip-list-spacing p {
    margin: 14px 0 0 0;
    /* margin: 4px; */
    color:#af9442;
    font-weight: 700;
}

.trip-list-spacing a {
    font-size: 22px;
}

.trip-list-spacing ul {
    margin-bottom: 5px;
    padding: 0;
    list-style-type: none;
}

.trip-image img {
    width: 95%;
    margin-left: 2.5%;
}

/*--------------------------------------------text animation code courtesy of geeksfor geeks.org and amended by me*/
.text-type-container { 
    margin: 13px 20px 325px 20px;
    padding-top: 2px;
    width: 50%; 
    height: auto; 
} 

.text-typing { 
    background: #143049; 
    font-size: 35px; 
    font-family: "libre+baskerville"; 
    padding-top: 1vh;
    border-radius: 50px; 
    overflow: hidden; 
    position: relative; 
} 

/* changed from p to h1 */
.text-typing h1 { 
    margin: 0px; 
    clip-path: polygon(0 0, 0 100%, 100% 100%, 100% 0); 
    animation:  
typing 1s steps(22, end) forwards; 
} 

@keyframes typing { 
    0% { width: 0% } 
    100% { width: 100% } 
} 

/*--------------------------------------------Hover Control*/

.hvr-grow:hover {
    transform: scale(1.4);
}

/*--------------------------------------------footer*/

footer {
    color: #fff;
    min-height: 120px;
}

.social-links {
    padding-bottom: 2em;
    padding-left: 0.1em;
    padding-top: 1em;
}

.social-links li a i {
    width: 32px;
    height: 32px;
    padding: 12px 0;
    border-radius: 50%;
    font-size: 13px;
    line-height: 7px;
    text-align: center;
    /* color contrast set to meet WCAG guidelines */
    color: #000000;
    background: #af9442;
    transition: all 0.35s ease-in-out;
    -moz-transition: all 0.35s ease-in-out;
    -webkit-transition: all 0.35s ease-in-out;
    -o-transition: all 0.35s ease-in-out;
}

.sr-only {
    color: #efe9d7;
}

.list-inline {
    text-align:center;
}

.foot-email {
    text-align: center;
}

#footer-details {
    text-align: center;
}

/* ----------------------------------------Contact Form */

.comment-text {
    font-size: 24px;
    font-weight: 600;
}

.text-muted-wcag {
    /* to provide sufficient WCAG contrast */
    color: #f5f5f5 !important;
}

/* ----------------------------------------overriding some form-control settings to provide a crispy colour contrast */
.form-control {
    font-size: 1.5rem;
    font-weight: 500;
    color: #af9442;
    background-color: #082137;
    border: 1px solid #af9442;   
    border-radius: 2rem;
}

.center-form {
    padding-top: 10px;
    margin: 0 auto;
    max-width: 70%;
}

.label-font-size {
    font-size: 24px;
}

/* ----------------------------------------fixed size on page with scrollbar */
textarea {
    min-height: 200px;
    max-height: 300px;
    resize: none;
}

.btn-secondary {
    background-color: #af9442;
    color: #082137;
    border-radius: 2rem;
    margin: 25px;
}

.btn-secondary:hover {
    background-color: #178309;
    color: #143049
}

button[type="submit"] {
    margin-top: 15px;
    margin-bottom: 20px;
    font-size: 22px;
    font-weight: 500;
    color: #143049;
    background-color: #af9442;
}

/* ----------------------------------------Media Queries */

/* ----------------------------------------resize menu items and text for bigger  and ultra smallscreens*/

@media (min-width: 576px) {
    .menu-spacing span {
        font-size: 22px;
    }
    .menu-spacing a i {
        font-size: 22px;
    }
}

@media (max-width: 318px) {
  .menu-spacing span {
      font-size: 9px;
  }
}

/* ----------------------------------------change to proportional font size for paragraphs on larger screen sizes*/

@media (min-width: 1500px) {
    p {
        font-size: 1vw;
    }
}

/* ----------------------------------------change to text size on figcaption for single words. multiple word phrases will wrap */
@media (max-width: 735px) {
    .general-sub {
        font-size: 19px;
    }
}

